fix(Technologies): small fix in technology section, better layout on mobile

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -179,6 +179,13 @@ body {
         flex-wrap: wrap;
         height: auto;
         width: 100%;
+        padding-top: 20px;
+
+        @media only screen and (max-width: 1024px) {
+            padding-top: 0;
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     .technology-card-first-theme {
@@ -186,7 +193,7 @@ body {
         flex-direction: column;
         justify-content: space-evenly;
         margin: 10px;
-        height: 580px;
+        height: auto;
         max-width: 400px;
         background-color: #5FABF1;
         color: white;
@@ -194,13 +201,19 @@ body {
         padding: 10px;
         margin-top: 70px;
         
+        @media only screen and (max-width: 1024px) {
+            margin-top: 0px;
+        }
+
         h5 {
             text-transform: uppercase;
             letter-spacing: 1.5px;
+            padding: 10px;
         }
         
         span {
             font-size: 18px;
+            padding: 10px;
             @media only screen and (max-width: 600px) {
                 font-size: 17px;
             }
@@ -208,6 +221,7 @@ body {
 
         .icons-technology-container {
             padding: 20px;
+            margin-top: 20px;
             clip-path: circle();
             background-color: white;
         
@@ -223,20 +237,26 @@ body {
         flex-direction: column;
         justify-content: space-evenly;
         margin: 10px;
-        height: 580px;
+        height: auto;
         max-width: 400px;
         background-color: white;
         color: #5FABF1;
         text-align: center;
         padding: 10px;
 
+        @media only screen and (max-width: 1024px) {
+            margin-top: 0;
+        }
+
         h5 {
             text-transform: uppercase;
             letter-spacing: 1.5px;
+            padding: 10px;
         }
         
         span {
             font-size: 17px;
+            padding: 10px;
             @media only screen and (max-width: 600px) {
                 font-size: 16px;
             }
@@ -245,6 +265,7 @@ body {
 
         .icons-technology-container {
             padding: 20px;
+            margin-top: 20px;
             clip-path: circle();
             background-color: #5FABF1;
         
@@ -281,18 +302,9 @@ body {
 
     .contact-container {
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        align-items: center;
+        width: 100%;
 
-        .contact-card {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
-            background-color: #F2F2F2; 
-            color: black;
-            border-radius: 12px;
-            height: 500px;
-        }
     }
 }
